2012-08-24  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Add readyState functionality to RTCPeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=94813

        Reviewed by Adam Barth.

        * fast/mediastream/RTCPeerConnection-state-expected.txt: Added.
        * fast/mediastream/RTCPeerConnection-state.html: Added.

2012-08-24  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Get rid of frontendReused logic on front-end.
        https://bugs.webkit.org/show_bug.cgi?id=94929

        Reviewed by Pavel Feldman.

        * http/tests/inspector/resource-tree/resource-tree-events.html:

2012-08-24  'Pavel Feldman'  <pfeldman@chromium.org>

        Web Inspector: three layout tests crashing with assertion failure
        https://bugs.webkit.org/show_bug.cgi?id=94829

        Not reviewed: updating test expectations.

        * platform/chromium/TestExpectations:

2012-08-24  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening.

        Updating baselines for css3/flexbox/flexitem.html after r126503.

        * platform/gtk/css3/flexbox: Removed.
        * platform/gtk/css3/flexbox/flexitem-expected.txt: Removed.

2012-08-24  KwangYong Choi  <ky0.choi@samsung.com>

        [EFL] Added missing SKIP keyword to platform/efl/TestExpectations
        https://bugs.webkit.org/show_bug.cgi?id=94781

        Unreviewed. Removed unnecessary SKIP keyword.

        * platform/efl/TestExpectations:

2012-08-24  Xiaobo Wang  <xbwang@torchmobile.com.cn>

        Remove platform specific expected files after the change
        https://bugs.webkit.org/show_bug.cgi?id=94790

        Reviewed by Kentaro Hara.

        1. Use the cross-platform expected files for the 2 tests in question.
        2. Update other tests for overloaded functions and their expected files
        affected by the change.

        * fast/canvas/canvas-overloads-drawImage-expected.txt:
        * fast/canvas/canvas-overloads-setFillColor-expected.txt: