@@ -9,6 +9,7 @@ function test()
     // Always use indentation in scripts drop box
     WebInspector._isMac = false;
 
+    WebInspector.showPanel("scripts");
     var navigatorFileSelector = new WebInspector.ScriptsNavigator();
 
     var contentProvider = {
