@@ -7,6 +7,7 @@
 function test()
 {
     // Save time on style updates.
+    WebInspector.showPanel("elements");
     WebInspector.StylesSidebarPane.prototype.update = function() {};
     WebInspector.MetricsSidebarPane.prototype.update = function() {};
 
