@@ -5,6 +5,7 @@
 
 function test()
 {
+    WebInspector.showPanel("timeline");
     InspectorTest.addObject(WebInspector.TimelineModel.RecordType);
     InspectorTest.completeTest();
 }
